fix horizontal scrollbar and login positions

--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,5 +1,5 @@
 .stareamFooter-wrapper {
-    width: 100vw;
+    width: 100%;
     height: 40vh;
     background-color: #171a21;
     box-sizing: border-box;
